--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3-ui/core": "^0.6.1",
     "clsx": "^1.1.1",
+    "ethers": "^5.5.4",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
