--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "fluid-web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "clsx": "^1.1.1",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.39",
-    "autoprefixer": "^10.4.2",
-    "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0",
-    "postcss": "^8.4.7",
-    "tailwindcss": "^3.0.23",
-    "typescript": "4.5.5"
-  }
+	"name": "fluid-web",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"postinstall": "npm run typechain",
+		"typechain": "typechain --target=ethers-v5 src/abis/**/*.json --out-dir=src/types/contracts"
+	},
+	"dependencies": {
+		"@headlessui/react": "^1.5.0",
+		"@heroicons/react": "^1.0.5",
+		"@web3-ui/components": "^0.10.0",
+		"@web3-ui/core": "^0.6.1",
+		"clsx": "^1.1.1",
+		"ethers": "^5.5.4",
+		"next": "12.1.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	},
+	"devDependencies": {
+		"@typechain/ethers-v5": "^9.0.0",
+		"@types/node": "17.0.21",
+		"@types/react": "17.0.39",
+		"autoprefixer": "^10.4.2",
+		"eslint": "8.10.0",
+		"eslint-config-next": "12.1.0",
+		"postcss": "^8.4.7",
+		"tailwindcss": "^3.0.23",
+		"typechain": "^7.0.0",
+		"typescript": "4.5.5"
+	}
 }
